# identity-service

./: .gitignore  API-STYLE-GUIDE.md  Cargo.toml  PROBLEMS.md  README.md  deno.json  openapi.json  openapi.yaml
frontend/: types.d.ts  types.ts
frontend/add-first-passkey/: index.html  index.js  index.template.html  index.ts
frontend/add-passkey/: index.html  index.js  index.js.map  index.template.html  index.ts
frontend/identity/: index.html  index.js  index.js.map  index.template.html  index.ts  style.css
frontend/lib/: base64.d.ts  base64.js  base64.ts  fetch.d.ts  fetch.js  fetch.ts  form.d.ts  form.js  form.ts  redirect.d.ts  redirect.js  redirect.ts  style.min.css  temporal.ts
frontend/login/: index.html  index.js  index.js.map  index.template.html  index.ts
frontend/register/: index.html  index.js  index.js.map  index.template.html  index.ts
frontend/scripts/: base64.js  config.js  config.ts  consent.ts  fetch.js  form.js  identity.js  pageRequirements.js  pageRequirements.ts  token.ts  webauthn.ts
frontend/styles/: alert.css  base.css  footer.css  form.css  link-button.css  style.css
migrations/: 001.sql
sql/: 1_migrations.sql  2_clean.sql  2_identities.sql  3_clean.sql  3_identities.sql  4_challenge.sql  5_public_key.sql  6_revocation.sql
src/: config.rs  identity.rs  main.rs  models.rs  sql.rs  state.rs
src/models/: challenge.rs  identity.rs  ids.rs  mod.rs  public_key.rs
src/routes/: _credential_options.rs  challenges.rs  credential_options.rs  identities.rs  identity.rs  jwks.rs  mod.rs  public_keys.rs  public_keys_auth.rs  revoked_tokens.rs  tokens.rs  web_authn.rs  well_known.rs
src/routes/challenges/: mod.rs  post_handler.rs
src/routes/existing_credentials/: mod.rs
src/routes/identities/: delete_handler.rs  get_handler.rs  mod.rs  post_handler.rs
src/routes/public_keys/: delete_handler.rs  get_handler.rs  mod.rs  post_handler.rs
src/routes/revoked_tokens/: get_handler.rs  mod.rs  post_handler.rs
src/routes/tokens/: mod.rs  post_handler.rs
src/routes/well_known/: mod.rs
