[package]
authors = ["Trent Shailer"]
edition = "2024"
license = "MIT OR Apache-2.0"
name = "identity-service"
rust-version = "1.85"
version = "0.1.0"

[dependencies]
axum = { version = "0.8", default-features = false, features = [
    "http1",
    "http2",
    "json",
    "macros",
    "tokio",
] }
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }

bb8 = "0.9"
bb8-postgres = { version = "0.9" }
tokio-postgres = "0.7"

serde = { version = "1", features = ["derive"] }
serde_json = "1"

thiserror = "2"

tracing = "0.1"
tracing-subscriber = "0.3"

jiff = { version = "0.2", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }

# TODO
api-helper = { path = "../api-helper" }

jsonwebtoken = { version = "9.3", features = ["use_pem"] }

[workspace.lints.rust]
"deprecated_in_future" = "warn"
"missing_docs" = "warn"
"rust_2018_idioms" = "warn"
"unused_qualifications" = "warn"

[workspace.lints.clippy]
"as_conversions" = "warn"
"cast_lossless" = "warn"
"inconsistent_struct_constructor" = "warn"
"todo" = "warn"
"unnecessary_self_imports" = "warn"
"use_self" = "warn"
