[package]
authors = ["Trent Shailer"]
edition = "2024"
license = "MIT OR Apache-2.0"
name = "identity-service"
rust-version = "1.88"
version = "0.1.0"

[dependencies]
axum = { version = "0.8", default-features = false, features = [
    "http1",
    "http2",
    "json",
    "macros",
    "query",
    "tokio",
] }
http = { version = "1" }
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors"] }

bb8 = "0.9"
bb8-postgres = { version = "0.9" }
postgres = "0.19"
tokio-postgres = "0.7"

serde = { version = "1", features = ["derive"] }
serde_json = "1"

thiserror = "2"

# TODO
tracing = "0.1"
tracing-subscriber = "0.3"

jiff = { version = "0.2", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }

schemars = { version = "1" }

ts-sql-helper-lib = { version = "0.4", features = ["derive"] }
# ts-api-helper = { version = "0.3", features = ["vendor-openssl"] }
ts-api-helper = { path = "../api-helper" }
ts-rust-helper = { version = "0.7", features = ["command", "config", "log"] }

base64ct = { version = "1.8", features = ["alloc"] }

rand = "0.9"

[features]
vendor-openssl = ["ts-api-helper/vendor-openssl"]

[lints.rust]
"unused_qualifications" = "warn"

[lints.clippy]
"as_conversions" = "warn"
"cast_lossless" = "warn"
"dbg" = "warn"
"inconsistent_struct_constructor" = "warn"
"todo" = "warn"
"unnecessary_self_imports" = "warn"
"use_self" = "warn"
